# n8n-amir

./: .dockerignore  Dockerfile.n8n-amir  LICENSE  README-prd.md  README-zh.md  README.md  build-prd.sh  build.sh  docker-compose-prd-unlock.yml  docker-compose-prd.yml  docker-compose.yml  fix-permissions.sh  pyproject.toml  uv-config-examples.md  uv.toml
